--- a/source/_posts/设计模式/设计模式.md
+++ b/source/_posts/设计模式/设计模式.md
@@ -7,10 +7,9 @@ categories: 技术
 abbrlink: 364ea8cc
 date: 2022-02-28 19:57:47
 ---
-# 设计模式
+# 常用设计模式
 
 ## 1.观察者模式
-
 
 * 定义：在对象之间定义了一对多的依赖，这样的话，当一个对象改变状态，依赖他的对象会受到通知并自动更新。（其实就是发布订阅模式：发布者发布信息，订阅者获取信息，订阅了就能收到消息，没订阅的就收不到消息）
 
