--- a/source/_posts/java面试/双亲委派机制.md
+++ b/source/_posts/java面试/双亲委派机制.md
@@ -1,9 +1,12 @@
 ---
 title: 双亲委派机制
 date: 2022-02-28 19:57:47
-tags: [编程,感悟]
+tags: [java]
 categories: 技术
 ---
+
+# 双亲委派机制
+
 ## 一、双亲委派机制
 
 1. class文件是通过类加载器加载到jvm中的
