--- a/source/_posts/sz上线流程/上线流程(复件).md
+++ b/source/_posts/sz上线流程/上线流程(复件).md
@@ -47,7 +47,7 @@ date: 2022-02-28 19:57:47
 
 9. ## 测试验收通过
 
-10. ## 顾璟琛修改jira成可发布生产状态
+10. ## ** *** ** 修改jira成可发布生产状态
 
-11. ## 发链接给方雷，可部署执行
+11. ## 发链接给**，可部署执行
 
