--- a/source/_posts/02个人学习/02_01_研究/专利/专利发表教程.md
+++ b/source/_posts/02个人学习/02_01_研究/专利/专利发表教程.md
@@ -72,7 +72,7 @@ date: 2022-10-25 15:08:00
 
 一般耗时2年，初审1年，实质审查1年
 
-[](https：//cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/UKL3OZ.png)
+![](https：//cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/UKL3OZ.png)
 
 ## 发明专利申请文件
 
@@ -97,19 +97,19 @@ date: 2022-10-25 15:08:00
 
 [网站](https：//www.cnipa.gov.cn/col/col192/index.html)
 
-[](https：//cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/EY4LMN.jpg)
+![](https：//cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/EY4LMN.jpg)
 
-[](https：//cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/BNdU7B.png)
+![](https：//cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/BNdU7B.png)
 
 ### 请求书
 
-[](https：//cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/0jRLV5.png)
+![](https：//cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/0jRLV5.png)
 
 按表格填写基本说明
 
 ### 说明书
 
-[](https：//cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/Ufwjsy.png)
+![](https：//cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/Ufwjsy.png)
 
 - 技术领域
 
@@ -192,7 +192,7 @@ date: 2022-10-25 15:08:00
   - 错误：XXX蛋白及其抑制剂在XXX疾病中的应用
   - 改为：XXX蛋白及其抑制剂在制备治疗XXX疾病的药物中的应用
 
-  [](https：//cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/tjIhkh.jpg)
+  ![](https：//cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/tjIhkh.jpg)
 
 ### 说明书附图
 
@@ -204,7 +204,7 @@ date: 2022-10-25 15:08:00
 
 
 
-[](https：//cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/Urqpgg.png)
+![](https：//cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/Urqpgg.png)
 
 ### 权利要求书
 - 权利要求书，专利要保护的范围。300字左右。
@@ -212,7 +212,7 @@ date: 2022-10-25 15:08:00
 一种A基因在XXXX疾病中的功能,其特征在于体现在A具有XXXX的功能。
 权利要求1所述功能的应用,其特征在于A在XXXX方面应用。
 权利要求2所述功能的应用,其特征在于A在XXXX方面应用。
-[](https：//cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/FwKG59.png)
+![](https：//cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/FwKG59.png)
 
 ### 摘要
 
@@ -236,4 +236,4 @@ date: 2022-10-25 15:08:00
   - 第4句:因此,靶分子具有XXXX的能力。
   - 第5句:针对靶分子的上述功能,靶分子可用于在XXXX的应用。
 
-[](https：//cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/nwUkfB.png)
+![](https：//cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/nwUkfB.png)
