--- a/source/_posts/02个人学习/02_01_研究/专利/专利发表教程.md
+++ b/source/_posts/02个人学习/02_01_研究/专利/专利发表教程.md
@@ -12,28 +12,28 @@ date: 2022-10-25 15:08:00
 
 ## 专利的基本概念
 
-### 专利三性：新颖性、创造性和实用性
+### 专利三性:新颖性、创造性和实用性
 
-新颖性：
+新颖性:
 
 - 该发明不属于现有技术
 - 没有任何单位或者个人就同样的发明或者实用新型在申请日以前向专利局提出过申请，并记载在申请日以后（含申请日）公布的专利申请文件或公告的专利文件中
 - 全世界范围内
 
-创造性：
+创造性:
 
 - 与申请日以前在国内外为公众所知的技术相比，该发明具有突出实质性特点和显著的进步
 
-实用性：
+实用性:
 
 - 该发明能够制造或者使用，并且能够产生积极效果
 
-###  专利的种类：发明专利、实用新型专利、外观设计专利
+###  专利的种类:发明专利、实用新型专利、外观设计专利
 
 1. 发明专利
-- 定义：指对产品、方法或者其改进所提出的新的技术方案
-- 发明专利分为：产品发明、方法发明
-- 特点：
+- 定义:指对产品、方法或者其改进所提出的新的技术方案
+- 发明专利分为:产品发明、方法发明
+- 特点:
   - 发明是一项新的技术方案。利用自然规律解决生产、科研、试验中各种问题的技术解决方案，一般有若干技术特征组成。
   - 按照性质划分，发明权利要求有两种基本类型，分为产品权利要求和方法权利要求
 
@@ -41,15 +41,15 @@ date: 2022-10-25 15:08:00
     - 方法权利要求包括时间过程要素的活动，又可以分成方法和用途两种类型。专利法保护的发明也可以是对现有产品或方法的改进
 
 2. 实用新型专利
-- 定义：对产品的形状、构造或者其结合所提出的适于实用的新的技术方案
-- 实用新型与发明的不同之处在于：
+- 定义:对产品的形状、构造或者其结合所提出的适于实用的新的技术方案
+- 实用新型与发明的不同之处在于:
   - 实用新型限于具有一定形状的产品，不能是一种方法，也不能是没有固定形状的产品
   - 对实用新型的创造性要求相比发明较低
-- 产品的形状：指产品所具有的、可以从外部观察到确定的空间形状。例如：对凸轮形状、刀具形状作出的改进，对型材的断面形状的改进
-- 产品的构造：产品的各个组成部分的安排、组织和相互关系。产品的构造可以是机械构造，也可以是线路构造
+- 产品的形状:指产品所具有的、可以从外部观察到确定的空间形状。例如:对凸轮形状、刀具形状作出的改进，对型材的断面形状的改进
+- 产品的构造:产品的各个组成部分的安排、组织和相互关系。产品的构造可以是机械构造，也可以是线路构造
 
 3. 外观设计专利
-- 外观设计：
+- 外观设计:
   - 对产品的形状、图案或者其结合以及色彩与形状、图案的结合所作出的富有美感并适于工业应用的新设计
   - 指产品外观的设计方案。与发明或实用新型完全不同，即外观设计不是技术方案。
 - 外观设计专利符合要求
@@ -60,83 +60,83 @@ date: 2022-10-25 15:08:00
 
 ### 网站
 
-[国家知识产权局](https：//www.cnipa.gov.cn/)
+[国家知识产权局](https://www.cnipa.gov.cn/)
 
-[中国专利公布公告](http：//epub.cnipa.gov.cn/)
+[中国专利公布公告](http://epub.cnipa.gov.cn/)
 
 ###  发明专利审批流程
 
-发明专利：受理、初审、公布、实审以及授权五个阶段
+发明专利:受理、初审、公布、实审以及授权五个阶段
 
-实用新型、外观设计专利：受理、初审和授权三个阶段
+实用新型、外观设计专利:受理、初审和授权三个阶段
 
 一般耗时2年，初审1年，实质审查1年
 
-![](https：//cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/UKL3OZ.png)
+![](https://cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/UKL3OZ.png)
 
 ## 发明专利申请文件
 
 ### 文件
 
-包括5部分：
+包括5部分:
 
-1. 请求书：一份表格，用以确定发明和实用新型的名称，发明人姓名等事项
-2. 说明书：对专利做出详细的说明。包括：
+1. 请求书:一份表格，用以确定发明和实用新型的名称，发明人姓名等事项
+2. 说明书:对专利做出详细的说明。包括:
    1. 技术领域
    2. 背景技术
    3. 发明内容
    4. 附图说明
    5. 具体实施方式
-3. 说明书附图：通过附图，帮助理解说明书所陈述的内容
-4. 权利要求书：要求专利保护的范围，是申请文件的核心内容
-5. 摘要：技术要点的说明
+3. 说明书附图:通过附图，帮助理解说明书所陈述的内容
+4. 权利要求书:要求专利保护的范围，是申请文件的核心内容
+5. 摘要:技术要点的说明
 
 ### 文件下载
 
 > 文件100001、100002、100003、100004、110101
 
-[网站](https：//www.cnipa.gov.cn/col/col192/index.html)
+[网站](https://www.cnipa.gov.cn/col/col192/index.html)
 
-![](https：//cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/EY4LMN.jpg)
+![](https://cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/EY4LMN.jpg)
 
-![](https：//cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/BNdU7B.png)
+![](https://cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/BNdU7B.png)
 
 ### 请求书
 
-![](https：//cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/0jRLV5.png)
+![](https://cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/0jRLV5.png)
 
 按表格填写基本说明
 
 ### 说明书
 
-![](https：//cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/Ufwjsy.png)
+![](https://cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/Ufwjsy.png)
 
 - 技术领域
 
   - 指发明或实用新型直接所属或直接应用的技术领域
   - 高度概括的介绍发明的应用领域。50-80字。
   - 例
-    - 例1：本发明属于基因功能与应用领域，具体涉及A基因作为药物靶标在筛选治疗B疾病中的应用，以及A抑制剂在制备治疗B疾病的药物中应用。
-    - 例2：本发明属于基因工程领域，具体地说，涉及一种XXXXX的基因工程方法。 
-    - 例3：本发明属于XXXXX的功能与应用领域，具体涉及XXXX代谢中产物A作为XXXXX 的应用。
+    - 例1:本发明属于基因功能与应用领域，具体涉及A基因作为药物靶标在筛选治疗B疾病中的应用，以及A抑制剂在制备治疗B疾病的药物中应用。
+    - 例2:本发明属于基因工程领域，具体地说，涉及一种XXXXX的基因工程方法。 
+    - 例3:本发明属于XXXXX的功能与应用领域，具体涉及XXXX代谢中产物A作为XXXXX 的应用。
 
 - 背景技术
 
   - 类似论文中的introduction、 基金申请中的研究意义部分
-  - 三段式：层层递进的关系，1000-1200字
-    - 第一段：临床问题，400字。临床问题意义重大。比如：疾病的严重性，人群数量的严重性。 例如：膀胱癌流行病学数据。
-    - 第二段：疾病细分，400字。临床问题的背后因素，某一关键因素。某一疾病下往往会细分。 例如：膀胱癌淋巴转移概述，诊断治疗手段。
-    - 第三段：靶分子，400字。专利申请的靶分子。 例如：靶分子的研究背景。
+  - 三段式:层层递进的关系，1000-1200字
+    - 第一段:临床问题，400字。临床问题意义重大。比如:疾病的严重性，人群数量的严重性。 例如:膀胱癌流行病学数据。
+    - 第二段:疾病细分，400字。临床问题的背后因素，某一关键因素。某一疾病下往往会细分。 例如:膀胱癌淋巴转移概述，诊断治疗手段。
+    - 第三段:靶分子，400字。专利申请的靶分子。 例如:靶分子的研究背景。
 
 - 发明内容
 
   - 包括解决的技术问题、技术方案及有益效果
 
-  例子：
+  例子:
 
   ​       为解决上诉现有技术的缺陷和不足，本发明的目的是提供靶分子A作为XXX的应用，可为领域 1，领域2提供XXXX。
 
-  ​		为实现上述目的，本发明采用的技术方案为：
+  ​		为实现上述目的，本发明采用的技术方案为:
 
   ​		本发明以XXXX(细胞或者动物)为实验对象，通过建立XXXX模型，结果表明XXXX(简述具体 的实验过程和结果)。300字。
 
@@ -146,7 +146,7 @@ date: 2022-10-25 15:08:00
 
   ​		一种具有XXXX功能的药物，包含靶分子的抑制剂。 
 
-  ​		本发明相对于现有技术具有如下的有优点及效果：
+  ​		本发明相对于现有技术具有如下的有优点及效果:
 
   1. 本发明发现靶分子的新功能，及靶分子具有XXXX的作用
   2. 发明提出靶分于在XXXX中的作用，在制备用于XXXX等方面应用。
@@ -189,10 +189,10 @@ date: 2022-10-25 15:08:00
 
 - 题目
 
-  - 错误：XXX蛋白及其抑制剂在XXX疾病中的应用
-  - 改为：XXX蛋白及其抑制剂在制备治疗XXX疾病的药物中的应用
+  - 错误:XXX蛋白及其抑制剂在XXX疾病中的应用
+  - 改为:XXX蛋白及其抑制剂在制备治疗XXX疾病的药物中的应用
 
-  ![](https：//cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/tjIhkh.jpg)
+  ![](https://cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/tjIhkh.jpg)
 
 ### 说明书附图
 
@@ -200,11 +200,11 @@ date: 2022-10-25 15:08:00
 - 可以提升作图taste的三门课程
   -  40周中的套路课,对所讲的文献中作图有详细的讲解。
   - 单元课中GraphPad Prim
-  - 大师兄带你修炼科研绘图独家秘籍：有针对科研作图的介绍，软件Photoshop 和 Illustrator
+  - 大师兄带你修炼科研绘图独家秘籍:有针对科研作图的介绍，软件Photoshop 和 Illustrator
 
 
 
-![](https：//cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/Urqpgg.png)
+![](https://cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/Urqpgg.png)
 
 ### 权利要求书
 - 权利要求书，专利要保护的范围。300字左右。
@@ -212,18 +212,18 @@ date: 2022-10-25 15:08:00
 一种A基因在XXXX疾病中的功能,其特征在于体现在A具有XXXX的功能。
 权利要求1所述功能的应用,其特征在于A在XXXX方面应用。
 权利要求2所述功能的应用,其特征在于A在XXXX方面应用。
-![](https：//cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/FwKG59.png)
+![](https://cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/FwKG59.png)
 
 ### 摘要
 
 - 摘要，对整个发明做系统描述，介绍发明的特点和创新点。300字。
-- 格式：
-  - 第1句：总述靶分子的应用,以及所属的研究领域。
-  - 第2句：总述实验方法和实验结果。
-  - 第3句：总述靶分子的机制水平上功能。
-  - 第4句：总结靶分子在疾病中的功能。
-  - 第5句：靶分子的应用。
-- 例子1：
+- 格式:
+  - 第1句:总述靶分子的应用,以及所属的研究领域。
+  - 第2句:总述实验方法和实验结果。
+  - 第3句:总述靶分子的机制水平上功能。
+  - 第4句:总结靶分子在疾病中的功能。
+  - 第5句:靶分子的应用。
+- 例子1:
   - 第1句:本发明公开一种靶分子在XXXX疾病中的功能和应用,属于基因的功能与应用领域。
   - 第2句:本发明以XXXX小鼠为实验对象,通过建立XXXX疾病模型,结果表明与XXXX小鼠对比,靶 分子敲除或者过表达小鼠XXXX疾病变严重,XXXX指标增加显著。
   - 第3句:这些结果表明,靶分子有XXXX的能力,有XXXX的能力 (分子机制上讲)。
@@ -236,4 +236,4 @@ date: 2022-10-25 15:08:00
   - 第4句:因此,靶分子具有XXXX的能力。
   - 第5句:针对靶分子的上述功能,靶分子可用于在XXXX的应用。
 
-![](https：//cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/nwUkfB.png)
+![](https://cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/10/25/nwUkfB.png)
