命令行工具 部署

--- a/source/_posts/02个人学习/08_01_nas/nas教程/qnap终端/推荐22个命令行工具.md
+++ b/source/_posts/02个人学习/08_01_nas/nas教程/qnap终端/推荐22个命令行工具.md
@@ -88,9 +88,7 @@ https://github.com/jethrokuan/fzf
 
 ## fd
 
-
-
-![图片](https://github.com/swimminghao/picture/blob/main/img/2022/12/09/Kapture2022-12-09at11.12.59.gif)
+<img src="https://github.com/swimminghao/picture/blob/main/img/2022/12/09/Kapture2022-12-09at11.12.59.gif" style="zoom: 100%" />
 
 上面动图是 find 命令（左）和 fd 命令（右）的使用对比。
 
