--- a/source/_posts/02个人学习/08_01_nas/nas教程/qnap终端/推荐22个命令行工具.md
+++ b/source/_posts/02个人学习/08_01_nas/nas教程/qnap终端/推荐22个命令行工具.md
@@ -1,3 +1,4 @@
+
 ---
 title: 推荐 22 款好用的命令行工具
 tags:
@@ -88,7 +89,8 @@ https://github.com/jethrokuan/fzf
 
 ## fd
 
-<img src="https://github.com/swimminghao/picture/blob/main/img/2022/12/09/Kapture2022-12-09at11.12.59.gif" style="zoom: 100%" />
+
+<center><img src="https://github.com/swimminghao/picture/blob/main/img/2022/12/09/Kapture2022-12-09at11.12.59.gif" width = "" height = ""></center>
 
 上面动图是 find 命令（左）和 fd 命令（右）的使用对比。
 
