--- a/source/_posts/02个人学习/00_分类编号/00_01分类编号.md
+++ b/source/_posts/02个人学习/00_分类编号/00_01分类编号.md
@@ -11,7 +11,7 @@ date: 2022-10-14 15:10:00
 | ---- | :----- | ---- | ---- | ---- |
 | 01   | 无人机 |      |      |      |
 | 02   | 博客   |      |      |      |
-| 03   | word    |      |      |      |
+| 03   | office    |      |      |      |
 | 04   | git |      |      |      |
 | 05   | docker   |      |      |      |
 | 06   | java  |      |      |      |
