office 学习 commit

--- a/source/_posts/02个人学习/03_01_office学习/word、excel、ppt从小白到高手/word/46-数据不整理统计泪两行.md
+++ b/source/_posts/02个人学习/03_01_office学习/word、excel、ppt从小白到高手/word/46-数据不整理统计泪两行.md
@@ -1,8 +1,8 @@
 ---
-title: 让表格图表更加动态化
+title: 数据不整理统计泪两行
 tags:
   - office
 categories: 技巧
-abbrlink: 1d545e0f
+abbrlink: 4611aad1
 date: 2023-03-02 11:10:00
 ---
