--- a/source/_posts/02个人学习/03_01_office学习/word、excel、ppt从小白到高手/word/24-精通表格别开玩笑了.md
+++ b/source/_posts/02个人学习/03_01_office学习/word、excel、ppt从小白到高手/word/24-精通表格别开玩笑了.md
@@ -1,8 +1,8 @@
 ---
-title: 让表格图表更加动态化
+title: 精通表格别开玩笑了
 tags:
   - office
 categories: 技巧
-abbrlink: 1d545e0f
+abbrlink: 45d2ec7c
 date: 2023-03-02 11:10:00
 ---
