photoshop 学习 commit

--- a/source/_posts/02个人学习/00_分类编号/00_01分类编号.md
+++ b/source/_posts/02个人学习/00_分类编号/00_01分类编号.md
@@ -25,6 +25,6 @@ date: 2022-10-14 15:10:00
 | 14   | 终端 |      |      |      |
 | 15   | 设计模式 |      |      |      |
 | 16   | 整理 |      |      |      |
-| 17   |        |      |      |      |
-| 18   |        |      |      |      |
+| 17   | 博客配置 |      |      |      |
+| 18   | photoshop |      |      |      |
 |      |        |      |      |      |
