--- a/source/_posts/02个人学习/02_01_研究/博士/英语作文模板.md
+++ b/source/_posts/02个人学习/02_01_研究/博士/英语作文模板.md
@@ -1,9 +1,10 @@
 ---
 title: 英语作文模板
 tags:
-    - 总结
-    - 英语
+  - 总结
+  - 英语
 categories: 学习
+abbrlink: 1440ab84
 date: 2023-03-28 23:00:00
 ---
 # 英语作文模板
