--- a/source/_posts/02个人学习/02_01_研究/博士/英语作文模板.md
+++ b/source/_posts/02个人学习/02_01_研究/博士/英语作文模板.md
@@ -31,7 +31,7 @@ To sum up,we should try to bring the advantages of <u>讨论议题</u> into full
 
 There is a widespread concern over the issue that <u>作文题目</u>.But it is well known that the opinion concerning this hot topic varies from person to person.A majority of people think that <u>观点一</u>.In their views there are two factors contributing to this attitude as follows: in the first place,<u>原因一</u>.Furthermore,in the second place,<u>原因二</u>.So it goes without saying that <u>观点三</u>.
 
-People,however,differ in their opinions on this matter.Some people hold the idea that <u>观点二</u>.In their point of view,on the one hand，<u>原因一</u>.On the other hand,<u>原因二</u>.Therefore,there is no doubt that <u>观点二</u三.
+People,however,differ in their opinions on this matter.Some people hold the idea that <u>观点二</u>.In their point of view,on the one hand，<u>原因一</u>.On the other hand,<u>原因二</u>.Therefore,there is no doubt that <u>观点三</u>.
 
 As far as I am concerned,I firmly support the view that <u>观点一或二</u>.It is not only because<u>原因一</u> ,but also because<u>原因二</u> .The more we are aware of the significance of 。。。。,the more benefits we will get in our daily study and job.
 
