--- a/source/_posts/02个人学习/02_01_研究/博士/英语作文模板.md
+++ b/source/_posts/02个人学习/02_01_研究/博士/英语作文模板.md
@@ -33,11 +33,11 @@ There is a widespread concern over the issue that <u>作文题目</u>.But it is 
 
 People,however,differ in their opinions on this matter.Some people hold the idea that <u>观点二</u>.In their point of view,on the one hand，<u>原因一</u>.On the other hand,<u>原因二</u>.Therefore,there is no doubt that <u>观点三</u>.
 
-As far as I am concerned,I firmly support the view that <u>观点一或二</u>.It is not only because<u>原因一</u> ,but also because<u>原因二</u> .The more we are aware of the significance of 。。。。,the more benefits we will get in our daily study and job.
+As far as I am concerned,I firmly support the view that <u>观点一或二</u>.It is not only because<u>原因一</u> ,but also because<u>原因二</u> .The more we are aware of the significance of ＿＿＿＿,the more benefits we will get in our daily study and job.
 
 2. **谚语警句性议论文**
 
-It is well known to us that the proverb: "<u>谚语</u>"has a profound significance and value not only in our job but also in our study.It means<u>谚语的含义</u>.The saying can be illustrated through a series of examples as follows.(also theoretically)
+It is well known to us that the proverb: "<u>谚语</u>"has a profound significance and value not only in our job but also in our study.It means＿＿谚语的含义＿＿.The saying can be illustrated through a series of examples as follows.(also theoretically)
 
 A case in point is <u>例子一</u>.Therefore,it is goes without saying that it is of great of importance to practice the proverb <u>谚语</u>.
 
