--- a/source/_posts/07个人重要资料/00_分类编号/00_01分类编号.md
+++ b/source/_posts/07个人重要资料/00_分类编号/00_01分类编号.md
@@ -1,9 +1,9 @@
 ---
-title: 个人学习-分类编号
+title: 个人重要资料-分类编号
 tags:
   - 编号
 categories: 编号
-abbrlink: 65ea6269
+abbrlink: 4fd93e35
 date: 2022-10-14 15:10:00
 ---
 
