mapdb3.0.8版本java11编译导致 版本不一致问题

--- a/source/_posts/02个人学习/02_01_研究/机器学习/2019 Mac13.6安装cuda+cudnn+pytorch.md
+++ b/source/_posts/02个人学习/02_01_研究/机器学习/2019 Mac13.6安装cuda+cudnn+pytorch.md
@@ -4,7 +4,7 @@ tags:
   - 总结
   - python
 categories: 学习
-
+abbrlink: 2485e3e4
 date: 2023-11-21 15:08:00
 ---
 
@@ -40,7 +40,7 @@ CUDA Driver与NVIDIA GPU Driver的版本要一致，CUDA才能找到显卡
 
 - CUDA Driver Version: 418.105
 - CUDA：10.1.105
-- cuDNN：7.4.2
+- cuDNN：7.4.
 
 版本查看方式：
 
