自由开发者 副业

--- a/source/_posts/01工作目录/01_01_副业/独立开发者/为何大多数程序员做不了独立开发者？.md
+++ b/source/_posts/01工作目录/01_01_副业/独立开发者/为何大多数程序员做不了独立开发者？.md
@@ -241,11 +241,12 @@ date: 2024-11-15 17:18:00
 (2) 如果你有竞争对手，对手很牛，营销也很好，那么对手收费的，那你就比他便宜，或者免费。
 
 总之，你一定要比别人有至少一个点的优势，如价格优势，或者 某个特有功能优势。
-13. 脑袋空空的，没啥好创意，找不到感觉？
-    (1)去 小众应用 网站，360 腾讯软件管家，国外下载站，mac apple android 等应用网站多看看
-    (2)多用百度 微信 抖音 等搜索指数 看看一些关键词的搜索量
-    (3)多看广告，尤其抖音 百度 上的人家持续推广的软件相关的广告（重点）
-    (4)去看看一些任务外包平台，别人的小需求，可能蕴藏着大商机（重点）
-    (5)多看看别人在运营的软件，多琢磨它的盈利点，以及运营手段
-    (6)别人做过的，你也可以做，重点是 运营（重点）
-    多看多琢磨，积累素材，慢慢就有感觉了，能感觉哪些可以做，哪些不可以做。如果你不看不琢磨，脑袋空空，一点素材都没有，大脑如何联想、如何想象，如何迸发灵感，脑袋怎么可能有感觉了！≠
+**13. 脑袋空空的，没啥好创意，找不到感觉？**
+
+(1)去 小众应用 网站，360 腾讯软件管家，国外下载站，mac apple android 等应用网站多看看
+(2)多用百度 微信 抖音 等搜索指数 看看一些关键词的搜索量
+(3)多看广告，尤其抖音 百度 上的人家持续推广的软件相关的广告（重点）
+(4)去看看一些任务外包平台，别人的小需求，可能蕴藏着大商机（重点）
+(5)多看看别人在运营的软件，多琢磨它的盈利点，以及运营手段
+(6)别人做过的，你也可以做，重点是 运营（重点）
+多看多琢磨，积累素材，慢慢就有感觉了，能感觉哪些可以做，哪些不可以做。如果你不看不琢磨，脑袋空空，一点素材都没有，大脑如何联想、如何想象，如何迸发灵感，脑袋怎么可能有感觉了！≠
